--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,9 @@ development:
   encoding: unicode
   database: proteus_tool_development
   pool: 5
-  username: proteus_tool
+  username: postgres
   password:
+  template: template_postgis  
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -39,13 +40,14 @@ test:
   encoding: unicode
   database: proteus_tool_test
   pool: 5
-  username: proteus_tool
+  username: postgres
   password:
+  template: template_postgis  
 
 production:
   adapter: postgresql
   encoding: unicode
   database: proteus_tool_production
   pool: 5
-  username: proteus_tool
+  username: postgres
   password:
