--- a/config/database.yml
+++ b/config/database.yml
@@ -47,6 +47,7 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
+  host: 10.245.86.6
   database: proteus_tool_production
   pool: 5
   username: postgres
